# build-a-bundler

./: .gitignore  LICENSE  README.md  cli.js  package.json
example-app-to-bundle/: .babelrc  index.html  package.json
example-app-to-bundle/src/: App.js  index.js
example-react-app/: .babelrc  index.html  package.json
example-react-app/src/: App.js
example-simple-app/: .babelrc  index.html  package.json
example-simple-app/src/: message.js
example-super-large-app/: generate-src-files.js  package.json  text.js  webpack.config.js
example-super-large-app/.bundler-cache/: 000149.ldb  000155.ldb  000447.ldb  000449.ldb  000451.ldb  000453.ldb  000455.ldb  000457.ldb  000459.ldb  000461.ldb  000463.ldb  000465.ldb  000487.ldb  000489.ldb  000491.ldb  000493.ldb  000495.ldb  000497.ldb  000499.ldb  000501.ldb  000503.ldb  000505.ldb  000527.ldb  000529.ldb  000531.ldb  000533.ldb  000541.ldb  000543.ldb  000545.ldb  000547.ldb  000549.ldb  000551.ldb  000573.ldb  000575.ldb  000577.ldb  000579.ldb  000584.ldb  000585.ldb  000587.ldb  000589.ldb  (+189 more)
example-super-large-app/src/: index.js
rb/: Cargo.toml  input.js
rb/examples/: rb.rs
rb/src/: lib.rs
src/: Bundler.js
super-optimized-bundler/: package.json
super-optimized-bundler/src/: Bundler.js
super-scalable-bundler/: cli.js  package.json
super-scalable-bundler/src/: AssetProcessor.js  Bundler.js
super-simple-bundler/: cli.js  package.json
super-simple-bundler/src/: Bundler.js
