[package]
name = "rb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxc_resolver = "0.5.5"
serde = "1.0.193"
serde_json = "1.0.108"
swc_atoms = "0.6.5"
swc_common = { version = "0.33.10", features = ["concurrent"] }
swc_ecma_ast = "0.110.11"
swc_ecma_codegen = "0.146.37"
swc_ecma_parser = "0.141.29"
swc_ecma_visit = "0.96.11"
